--- a/man/js_demo.1.in
+++ b/man/js_demo.1.in
@@ -25,8 +25,8 @@ js_demo \- joystick test program for FlightGear
 is a joystick test program for the FlightGear Flight Simulator.
 For more information visit <http://wiki.flightgear.org/Joystick>.
 .SH BUGS
-Send bug reports to <flightgear-devel@lists.sourceforge.net> or visit
-<http://code.google.com/p/flightgear-bugs>.
+Send bug reports to <flightgear\-devel@lists.sourceforge.net> or visit
+<http://code.google.com/p/flightgear\-bugs>.
 .SH SEE ALSO
 fgfs(1), fgjs(1), fgpanel(1), terrasync(1)
 .SH AUTHORS
