--- a/man/gl-info.1.in
+++ b/man/gl-info.1.in
@@ -17,15 +17,15 @@
 .\"
 .TH GL-INFO 1 "January 2002" "@VERSION@" "@PACKAGE@"
 .SH NAME
-gl-info \- OpenGL test program for FlightGear
+gl\-info \- OpenGL test program for FlightGear
 .SH SYNOPSIS
 .B gl-info
 .SH DESCRIPTION
 .B gl-info
 is an OpenGL test program used to verify a valid OpenGL environment.
 .SH BUGS
-Send bug reports to <flightgear-devel@lists.sourceforge.net> or visit
-<http://code.google.com/p/flightgear-bugs>.
+Send bug reports to <flightgear\-devel@lists.sourceforge.net> or visit
+<http://code.google.com/p/flightgear\-bugs>.
 .SH SEE ALSO
 fgfs(1), fgjs(1), fgpanel(1), js_demo(1), terrasync(1)
 .SH AUTHORS
