Make web browser app configurable through CMake (for Linux) so package builders don't need local patches. Also, instead of hardcoded firefox, use "xdg-open" or "sensible-browser" launchers on Linux, to auto-detect user's preferred browser. Override with cmake switch -DWEB_BROWSER=... (Not affecting Mac/Win which are hard-coded anyway).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ endif(InSourceBuild)
 
 # System detection/default settings
 include( DetectDistro )
+include( DetectBrowser )
 
 set(CMAKE_DEBUG_POSTFIX          "d" CACHE STRING "add a postfix, usually d on windows")
 set(CMAKE_RELEASE_POSTFIX        ""  CACHE STRING "add a postfix, usually empty on windows")
