Implement a persistent cache for navigation data.
Cache the parsed navigation and airport data in a binary file to reduce
startup times and memory consumption (since only referenced FGPositioned
elements are held in memory).

Data will be reimported when the mod-time of any input file is changed.
If a global file is changed (nav.dat, awy.dat, apt.dat, etc), the cache
will be completely rebuilt, which takes approximately 30 seconds on
moderate hardware. (Future work may reduce this).

--- a/src/Navaids/CMakeLists.txt
+++ b/src/Navaids/CMakeLists.txt
@@ -14,6 +14,9 @@ set(SOURCES
 	waypoint.cxx
     LevelDXML.cxx
     FlightPlan.cxx
+    NavDataCache.cxx
+    sqlite3.c
+    PositionedOctree.cxx
 	)
 
 set(HEADERS
@@ -30,6 +33,9 @@ set(HEADERS
 	waypoint.hxx
     LevelDXML.hxx
     FlightPlan.hxx
+    NavDataCache.hxx
+    sqlite3.h
+    PositionedOctree.hxx
     )
 
 flightgear_component(Navaids "${SOURCES}" "${HEADERS}")
