Implement a persistent cache for navigation data.
Cache the parsed navigation and airport data in a binary file to reduce
startup times and memory consumption (since only referenced FGPositioned
elements are held in memory).

Data will be reimported when the mod-time of any input file is changed.
If a global file is changed (nav.dat, awy.dat, apt.dat, etc), the cache
will be completely rebuilt, which takes approximately 30 seconds on
moderate hardware. (Future work may reduce this).

--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -65,6 +65,11 @@ source_group("Main\\Headers" FILES ${HEADERS})
 source_group("Main\\Sources" FILES ${SOURCES})
 add_executable(fgfs ${SOURCES} ${FG_SOURCES} ${FG_HEADERS} ${HEADERS})
 
+# disable sqlite3 dynamic lib support
+# this should really be a SOURCE property, but the way we handle
+# Fcomponent sources is making that tricky
+add_definitions(-DSQLITE_OMIT_LOAD_EXTENSION)
+
 get_property(FG_LIBS GLOBAL PROPERTY FG_LIBS)
 #message(STATUS "fg libs ${FG_LIBS}")
 #message(STATUS "OSG libs ${OPENSCENEGRAPH_LIBRARIES}")
