Create FGSoundManager as a wrapper for SGSoundMgr_OpenAl and sink all sound related code from main.cxx in there.

--- a/src/Sound/CMakeLists.txt
+++ b/src/Sound/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SOURCES
 	sample_queue.cxx
 	voice.cxx
 	voiceplayer.cxx
+	soundmanager.cxx
 	)
 
 set(HEADERS
@@ -20,6 +21,7 @@ set(HEADERS
 	sample_queue.hxx
 	voice.hxx
 	voiceplayer.hxx
+	soundmanager.hxx
 	)
-    		
+
 flightgear_component(Sound "${SOURCES}" "${HEADERS}")
