Make magavr a regular subsystem.
Remove various hacks and make magvar work like a normal subsystem, as part of the environment manager. Fix the remaining users of the globals->get_mag accessor, and hence kill off the global pointer.

--- a/src/Environment/CMakeLists.txt
+++ b/src/Environment/CMakeLists.txt
@@ -17,6 +17,7 @@ set(SOURCES
 	terrainsampler.cxx
 	presets.cxx
 	gravity.cxx
+    magvarmanager.cxx
 	)
 
 set(HEADERS
@@ -36,6 +37,7 @@ set(HEADERS
 	terrainsampler.hxx
 	presets.hxx
 	gravity.hxx
+    magvarmanager.hxx
 	)
     		
 flightgear_component(Environment "${SOURCES}" "${HEADERS}")
