Sink position-init code into its own file.
Separate other init functions from position init, since they are unrelated, and made fg_init.cxx very complex. Next step will be brining some sanity to the position init logic :)

--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -20,6 +20,7 @@ set(SOURCES
 	main.cxx
 	options.cxx
 	util.cxx
+    positioninit.cxx
 	${RESOURCE_FILE}
 	)
 
@@ -34,6 +35,7 @@ set(HEADERS
 	main.hxx
 	options.hxx
 	util.hxx
+    positioninit.hxx
 	)
 
 get_property(FG_SOURCES GLOBAL PROPERTY FG_SOURCES)
