--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -98,6 +98,7 @@ target_link_libraries(fgfs
 	${PLIB_LIBRARIES}
 	${JPEG_LIBRARY}
 	${HLA_LIBRARIES}
+    ${SQLITE3_LIBRARY}
 	${EVENT_INPUT_LIBRARIES}
 	${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
 	${SIMGEAR_SCENE_LIBRARY_DEPENDENCIES}
