--- a/src/Navaids/CMakeLists.txt
+++ b/src/Navaids/CMakeLists.txt
@@ -15,7 +15,6 @@ set(SOURCES
     LevelDXML.cxx
     FlightPlan.cxx
     NavDataCache.cxx
-    sqlite3.c
     PositionedOctree.cxx
 	)
 
@@ -34,8 +33,12 @@ set(HEADERS
     LevelDXML.hxx
     FlightPlan.hxx
     NavDataCache.hxx
-    sqlite3.h
     PositionedOctree.hxx
     )
+
+if (NOT SYSTEM_SQLITE)
+    list(APPEND SOURCES sqlite3.c)
+    list(APPEND HEADERS sqlite3.h)
+endif()
 
 flightgear_component(Navaids "${SOURCES}" "${HEADERS}")
