Fix compilation with enabled EVENT_INPUT Need to move the definition to the toplevel cmake file, since sources are no longer compiled on directory level (individual libs per dir).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,6 +132,7 @@ if(EVENT_INPUT)
             message(WARNING "UDev not found, event input is disabled!")
             set(EVENT_INPUT 0)
         else()
+            add_definitions(-DWITH_EVENTINPUT)
             set(EVENT_INPUT_LIBRARIES ${UDEV_LIBRARIES})
             message(STATUS "event-based input enabled. Using ${UDEV_LIBRARIES}")
         endif()
