Make HUD items private to the subsystem.
Make the HUD independent of the instrument manager, and push most of the declarations from the header into a private header.

--- a/src/Instrumentation/CMakeLists.txt
+++ b/src/Instrumentation/CMakeLists.txt
@@ -106,6 +106,7 @@ set(HEADERS
     wxradar.hxx
     NavDisplay.hxx
     HUD/HUD.hxx
+    HUD/HUD_private.hxx
     KLN89/kln89.hxx
     KLN89/kln89_page.hxx
     KLN89/kln89_page_act.hxx
