Initial work on dynamic subsystem creation.
Make subsystems create-able and removable from commands. Only some subsystems are supported so far, since many have non-default constructors or other complexities.

With this, change, it's possible to dynamically add and remove the traffic-manager at runtime, for example: fgcommand("add-subsystem", props.Node.new({ "subsystem": "traffic-manager", "name":"traffic-manager", "do-bind-init":1}));

--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -21,6 +21,7 @@ set(SOURCES
 	options.cxx
 	util.cxx
     positioninit.cxx
+    subsystemFactory.cxx
 	${RESOURCE_FILE}
 	)
 
@@ -36,6 +37,7 @@ set(HEADERS
 	options.hxx
 	util.hxx
     positioninit.hxx
+    subsystemFactory.hxx
 	)
 
 get_property(FG_SOURCES GLOBAL PROPERTY FG_SOURCES)
