--- a/src/Include/config_cmake.h.in
+++ b/src/Include/config_cmake.h.in
@@ -36,6 +36,7 @@
 #define WEB_BROWSER "@WEB_BROWSER@"
 
 #cmakedefine FG_HAVE_HLA
+#cmakedefine FG_HAVE_GPERFTOOLS
 #cmakedefine FG_JPEG_SERVER
 
 #cmakedefine SYSTEM_SQLITE
