Clean up CanvasWidget and more work on Canvas/Nasal bindings

--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -91,7 +91,7 @@ if(ENABLE_JSBSIM)
 endif()
 
 if(FG_HAVE_GPERFTOOLS)
-    target_link_libraries(fgfs profiler)
+    target_link_libraries(fgfs profiler tcmalloc)
 endif()
 
 target_link_libraries(fgfs
