fgai: Add an initial sketch of an external ai module.

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -14,3 +14,8 @@ endif (FLTK_FOUND)
 if (WITH_FGPANEL)
     add_subdirectory(fgpanel)
 endif (WITH_FGPANEL)
+
+# win32 is just excluded because of not having argument parsing there ...
+if(RTI_FOUND AND NOT WIN32)
+    add_subdirectory(fgai)
+endif(RTI_FOUND AND NOT WIN32)
