Flight-path-history.
Record the historical flight-path (by default, since last takeoff). Optionally display the flight-path in the map; other visualisations (e.g., an 'in-world' view) could also be created. Nasal API to follow so Canvas-map or FMS can show the same data.

Altitude and attitude (Euler angles) are currently recorded but not used anywhere.

--- a/src/Aircraft/CMakeLists.txt
+++ b/src/Aircraft/CMakeLists.txt
@@ -4,12 +4,14 @@ set(SOURCES
 	controls.cxx
 	replay.cxx
 	flightrecorder.cxx
+    FlightHistory.cxx
 	)
 
 set(HEADERS
 	controls.hxx
 	replay.hxx
 	flightrecorder.hxx
+    FlightHistory.hxx
 	)
 
 
