fgviewer: Import hla based viewer application.

--- a/utils/fgviewer/CMakeLists.txt
+++ b/utils/fgviewer/CMakeLists.txt
@@ -1,11 +1,52 @@
+set(FGVIEWER_SOURCES
+  fgviewer.cxx
+  Drawable.cxx
+  Renderer.cxx
+  SlaveCamera.cxx
+  Viewer.cxx
+)
 
-add_executable(fgviewer fgviewer.cxx)
+if(RTI_FOUND)
+  set(FGVIEWER_RTI_SOURCES
+    HLACamera.cxx
+    HLACameraClass.cxx
+    HLACameraManipulator.cxx
+    HLADrawable.cxx
+    HLADrawableClass.cxx
+    HLAEyeTracker.cxx
+    HLAEyeTrackerClass.cxx
+    HLAMPAircraft.cxx
+    HLAMPAircraftClass.cxx
+    HLAOrthographicCamera.cxx
+    HLAOrthographicCameraClass.cxx
+    HLAPerspectiveCamera.cxx
+    HLAPerspectiveCameraClass.cxx
+    HLAPerspectiveViewer.cxx
+    HLAPerspectiveViewerClass.cxx
+    HLARenderer.cxx
+    HLARendererClass.cxx
+    HLASceneObject.cxx
+    HLASceneObjectClass.cxx
+    HLAView.cxx
+    HLAViewClass.cxx
+    HLAViewer.cxx
+    HLAViewerClass.cxx
+    HLAViewerFederate.cxx
+    HLAWindowDrawable.cxx
+    HLAWindowDrawableClass.cxx
+  )
+  set(FGVIEWER_RTI_LIBRARIES ${RTI_LIBRARIES})
+else()
+  set(FGVIEWER_RTI_LIBRARIES "")
+  set(FGVIEWER_RTI_SOURCES "")
+endif()
 
+add_executable(fgviewer ${FGVIEWER_SOURCES} ${FGVIEWER_RTI_SOURCES})
 target_link_libraries(fgviewer
+	${FGVIEWER_RTI_LIBRARIES}
 	${SIMGEAR_LIBRARIES}
 	${OPENSCENEGRAPH_LIBRARIES}
 	${OPENGL_LIBRARIES}
         ${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
 )
-
 install(TARGETS fgviewer RUNTIME DESTINATION bin)
