MouseInput changes to support hover.
This adds the framework for platform cursor implementations; Windows and X11 to be done.
It also extend the mouse-input code to generate hover events suitable for driving tooltips.

Note there should be no visible functionality change from this commit, since everything
is inactive until fgdata changes are made.

--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -20,6 +20,7 @@ set(SOURCES
 	FGColor.cxx
     FileDialog.cxx
     PUIFileDialog.cxx
+    MouseCursor.cxx
 	)
 
 set(HEADERS
@@ -39,11 +40,12 @@ set(HEADERS
 	FGColor.hxx
     FileDialog.hxx
     PUIFileDialog.hxx
+    MouseCursor.hxx
 	)
     		
 if (APPLE)
-    list(APPEND HEADERS FGCocoaMenuBar.hxx CocoaFileDialog.hxx)
-    list(APPEND SOURCES FGCocoaMenuBar.mm CocoaFileDialog.mm)
+    list(APPEND HEADERS FGCocoaMenuBar.hxx CocoaFileDialog.hxx CocoaMouseCursor.hxx)
+    list(APPEND SOURCES FGCocoaMenuBar.mm CocoaFileDialog.mm CocoaMouseCursor.mm)
 endif()
     		
 flightgear_component(GUI "${SOURCES}" "${HEADERS}")
