--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -111,13 +111,14 @@ target_link_libraries(fgfs
 
 install(TARGETS fgfs RUNTIME DESTINATION bin)
 
-add_executable(metar metar_main.cxx)
+if(ENABLE_METAR)
+    add_executable(metar metar_main.cxx)
+    target_link_libraries(metar
+        ${SIMGEAR_LIBRARIES}
+        ${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
+        ${SIMGEAR_SCENE_LIBRARY_DEPENDENCIES}
+        ${PLATFORM_LIBS}
+    )
 
-target_link_libraries(metar
-	${SIMGEAR_LIBRARIES}
-	${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
-	${SIMGEAR_SCENE_LIBRARY_DEPENDENCIES}
-	${PLATFORM_LIBS}
-)
-
-install(TARGETS metar RUNTIME DESTINATION bin)
+    install(TARGETS metar RUNTIME DESTINATION bin)
+endif()
