Start porting NasalPositioned to cppbind.
For now it is available in the positioned Nasal
module. FGAirport is fully ported, but especially
procedures/navaids and free functions are still
missing.

--- a/src/Scripting/CMakeLists.txt
+++ b/src/Scripting/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SOURCES
 	NasalSys.cxx
 	nasal-props.cxx
     NasalPositioned.cxx
+    NasalPositioned_cppbind.cxx
     NasalCanvas.cxx
     NasalClipboard.cxx
     NasalCondition.cxx
