Replace SGInterpolator with new advanced interpolation system.
Allow for advanced animations using easing functions and adapters
for interpolating specific property types (eg. CSS colors).
Old behavior should not have changed.

--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -14,6 +14,7 @@ set(SOURCES
 	fg_io.cxx
 	fg_os_common.cxx
 	fg_props.cxx
+	FGInterpolator.cxx
 	globals.cxx
 	locale.cxx
 	logger.cxx
@@ -30,6 +31,7 @@ set(HEADERS
 	fg_init.hxx
 	fg_io.hxx
 	fg_props.hxx
+	FGInterpolator.hxx
 	globals.hxx
 	locale.hxx
 	logger.hxx
